<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/lbl_totalVendas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="14dp"
        android:text="@string/totalVendas" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_totalVendas"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/calcularComissao" />

    <EditText
        android:id="@+id/txt_totalVendas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_totalVendas"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/digiteTotalVendido"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lbl_comissaoCalculada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lbl_totalComissao"
        android:layout_alignBottom="@+id/lbl_totalComissao"
        android:layout_marginLeft="12dp"
        android:layout_toRightOf="@+id/lbl_totalComissao"
        android:text="@string/nao_calculada" />

    <TextView
        android:id="@+id/lbl_totalComissao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_totalVendas"
        android:layout_below="@+id/btn_calcular"
        android:layout_marginTop="43dp"
        android:text="@string/totalComissao" />

    <Button
        android:id="@+id/btn_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_comissaoCalculada"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/configurar" />

</RelativeLayout>
